--- a/index.html
+++ b/index.html
@@ -1,11 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+
 </head>
+
 <body>
-  
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Shoes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Backend</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="#">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div id="carouselExampleControls" class="carousel slide bg-col" data-bs-ride="carousel">
+      <div class="carousel-inner " >
+        <div class="carousel-item active">
+          <div class="row align-items-center">
+            <div class="col-md-7">
+              <h1>Mega LcD TV</h1>
+              <p>It is the best tv in bangladesh which provide various service and waste time with enjoyfully anyone
+                with this</p>
+                <h1 class="price">$12000</h1>
+                <button class="buy-now-btn"> Buy Now</button>
+            </div>
+            <div class="col-md-5">
+              <img src="images/tv.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+
+        </div>
+        <div class="carousel-item">
+          <div class="row align-items-center">
+            <div class="col-md-7">
+              <h1>X-box For Living Room</h1>
+              <p>Its amaging which is best review of customer .You can see review in our page</p>
+                <h1 class="price">$1000</h1>
+                <button class="buy-now-btn"> Buy Now</button>
+            </div>
+            <div class="col-md-5"> <img src="images/xbox.png" class="d-block w-100" alt="..."></div>
+          </div>
+
+        </div>
+        <div class="carousel-item">
+          <div class="row align-items-center">
+            <div class="col-md-7">
+              <h1>Call Dude Headphone</h1>
+              <p>It is the renowned head phone and popular for best sound , no extra noice .It is just amaging.</p>
+                <h1 class="price">$420</h1>
+                <button class="buy-now-btn"> Buy Now</button>
+            </div>
+            <div class="col-md-5"> <img src="images/headphone.png" class="d-block w-100" alt="..."></div>
+          </div>
+
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
+   
+
+  </div>
+<div class="container categories">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="bg-col1  d-flex flex-row align-items-center justify-content-between ">
+        <h1>Watch</h1>
+        <img src="images/watch.png" alt="">
+        
+      </div>
+      
+    </div>
+    <div class="col-md-4 ">
+      <div class="bg-col2 d-flex flex-row align-items-center justify-content-between ">
+        <h1>Bag</h1>
+        <img src="images/bag.png" alt="">
+
+      </div>
+   
+    </div>
+    <div class="col-md-4 ">
+      <div class="bg-col3 d-flex flex-row align-items-center justify-content-between">
+        <h1>Shoes</h1>
+        <img src="images/shoes.png" alt="">
+      </div>
+
+
+    </div>
+  </div>
+</div>
+<div class="container" >
+
+</div>
+
+
+
+
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+    integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous">
+  </script>
+
 </body>
+
 </html>
