added search button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+      <div class="container-fluid ">
         <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,6 +37,11 @@
             </li>
           </ul>
         </div>
+      
+      <form class="d-flex  search1 ">
+        <input class="form-control me-2" type="search" placeholder="Search Item" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
       </div>
     </nav>
 
@@ -217,7 +222,7 @@
       <h6>Get updates on sales, specials and more</h6>
       <input type="text" placeholder="
       Write your Email" class="form-control">
-      <button class="buy-now-btn"> SUMBIT</button>
+      <button class="buy-now-btn"> SUMBIT</button> 
     </div>
 
   </div>
